Added startup notification and upgraded platform template